fix(homepage): improve tabs alignment

--- a/css/bastiat.css
+++ b/css/bastiat.css
@@ -627,8 +627,7 @@ div#tabs ul li {
 	border-radius: 0;
 	border: none;
 	padding-bottom: 0;
-	margin-bottom: 0;
-	margin-top: 0;
+	margin: 0 .1em;
 }
 
 div#tabs ul li:first-child {
